Conteúdo da pagina Produtos3

--- a/produto_page3.html
+++ b/produto_page3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wOrmhOle/Produtos/3</title>
+    <title>wOrmhOle/Produtos/Caixas</title>
     <link rel="shortcut icon" href="imagens/Processamento_1/IMP_Logo B_1.jpg" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css" media="screen">
     <link rel="stylesheet" href="estilo/print.css" media="print">
@@ -37,7 +37,57 @@
     </header>
     
     <main>
-        <h1>Pagina 3</h1>
+        <h1>Códigos de Identificação</h1>
+        <table>
+            <thead>
+                <th scope="col">A</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>A</td>
+                </tr>
+            </tbody>
+        </table>
+
+
+        <h1>Características Principais</h1>
+        <p>Esta versão incial das Caixas wOrmhOle compreende:</p>
+        <ul>
+            <li>Caixas e qualquer outro objeto modular neste formato, incluindo Quadro, a ser embutido na parede;</li>
+            <li>Dimensões modulares reais com tolerâncias dimensionais e geométricas menores do que 1 mm;</li>
+            <li>Pré-montagem sem encaixe, apenas por sobreposição e justaposição;</li>
+            <li>Chumbamento em lote junto com a parede de blocos.</li>
+
+        </ul>
+        <h1>Materiais</h1>
+        <ol>
+            <li>Caixas de Alumínio;</li>
+            <li>Caixas de Madeira;</li>
+            <li>Caixas de Vidro;</li>
+            <li>Caixas de PVC e outros compósitos;</li>
+            <li>Caixas de Aço carbono;</li>
+            <li>Caixas de Aço inox;</li>
+            <li>Caixas de Ferro forjado;</li>
+            <li>Caixas de Outros materiais.</li>
+        </ol>
+
+
+        <h1>Grupos de Caixas wOrmhOle</h1>
+        <h3>E: Caixa de disjuntores e outras caixas Elétricas</h3>
+        <h3>H: Caixa para Hidrômetro</h3>
+        <h3>N: Nichos para banheiros ou para outras finalidades</h3>
+
+
+        <h1>Códigos de Identificação</h1>
+        <p>Estrutura genérica: <strong>MEEG-XY-Z...</strong></p>
+        <p>Onde:</p>
+        <ul>
+            <li>MEGG = Modular Elements Grouted in Group (Elementos Modulares Grauteados em Grupo).</li>
+            <li>X = “C” para Caixas e similares.</li>
+            <li>Y = “1... 9” para Caixas conforme material definido no item 2.</li>
+            <li>Z = “E”, “N”, “N” conforme grupos de Caixas definidas no item 3.</li>
+            
+        </ul>
     </main>
 
     <script>
