--- a/produto_page5.html
+++ b/produto_page5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wOrmhOle/Produtos/5</title>
+    <title>wOrmhOle/Produtos/Dispositivos</title>
     <link rel="shortcut icon" href="imagens/Processamento_1/IMP_Logo B_1.jpg" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css" media="screen">
     <link rel="stylesheet" href="estilo/print.css" media="print">
