Conteúdo Produtos_4.HTML

--- a/produto_page4.html
+++ b/produto_page4.html
@@ -37,7 +37,31 @@
     </header>
     
     <main>
-        <h1>Pagina 4</h1>
+        <h1>Características Principais</h1>
+        <p>Esta versão incial de Material Aderente wOrmhOle compreende:</p>
+        <ul>
+            <li>Material pronto para uso, com adição de água no momento da aplicação;</li>
+            <li>Fluidez especialmente projetada para a aplicação nos MEEGs wOrmhOle;</li>
+            <li>Sem adição de pedriscos;</li>
+            <li>Saco de 25 kg;</li>
+            <li>Cor conforme a cor dos Blocos;</li>
+            <li>1 kg de material seco corresponde a 0,6 litros de graute pronto para aplicação;</li>
+            <li>Ficha técnica <a href="#">[link]</a>;</li>
+            <li>Ficha de informação de segurança do produto químico [link].</li>
+        </ul>
+        <p>Nota: A garantia de funcionamento do MEGG wOrmhOle System está relacionada à utilização dos Materias Aderents wOrmhOle especificados no item 2**.</p>
+
+
+        <h1>Materiais</h1>
+        <h3>1: Graute</h3>
+        <ul>
+            <li>Resistência à compressão ≥ 40 MPa em 28 dias;</li>
+            <li>Cor Cinza;</li>
+        </ul>
+
+
+        <h1>Códigos de Identificação</h1>
+        <p>MEEG-M1-Cz</p>
     </main>
 
     <script>
