Atualização de CSS e das imagens

--- a/produto_page1.html
+++ b/produto_page1.html
@@ -36,12 +36,12 @@
         </nav>
     </header>
     
-    <main>
+    <main class="prodbody">
         <h1>Desenhos de Montagem</h1>
         <table>
             <colgroup>
-                <col class="clink">
-                <col class="cdesc">
+                <col class="clinkb1">
+                <col class="cdescb1">
             </colgroup>
             <thead>
                 <th scope="col">Link</th>
@@ -109,19 +109,19 @@
                     <td>Amarração de canaletas J</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td><a href="imagens/Produtos/Image Figs/16_Viga - Apoio sobre coluna-0.jpg" target="_blank" rel="nofollow">Fig.16</a></td>
                     <td>Viga - Apoio sobre coluna</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td><a href="imagens/Produtos/Image Figs/17_Viga - Terminação em T-0.jpg" target="_blank" rel="nofollow">Fig.17</a></td>
                     <td>Viga - Terminação em T</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td><a href="imagens/Produtos/Image Figs/18_Viga - Terminação em X-0.jpg" target="_blank" rel="nofollow">Fig.18</a></td>
                     <td>Viga - Terminação em X</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td><a href="imagens/Produtos/Image Figs/19_Pilar-0.jpg" target="_blank" rel="nofollow">Fig.19</a></td>
                     <td>Pilar</td>
                 </tr>
             </tbody>
@@ -130,6 +130,12 @@
 
         <h1>Códigos de Identificação</h1>
         <table>
+            <colgroup>
+                <col class="ccodib2">
+                <col class="cdescb2">
+                <col class="cutilb2">
+                <col class="cdeseb2">
+            </colgroup>
             <thead>
                 <th scope="col">Código</th>
                 <th scope="col">Descrição</th>
