--- a/produto_page2.html
+++ b/produto_page2.html
@@ -36,7 +36,7 @@
         </nav>
     </header>
     
-    <main>
+    <main class="prodbody">
         <h1>Códigos de Identificação</h1>
         <table>
             <thead>
