--- a/home.html
+++ b/home.html
@@ -8,11 +8,9 @@
     <link rel="stylesheet" href="estilo/style.css" media="screen">
     <link rel="stylesheet" href="estilo/print.css" media="print">
     <style>
-        body{
-            background-color: white;
-        }
-        main{
-            background-color: white;
+        body,html{
+            background-image: linear-gradient(to top, gray, transparent);
+            height: 100%;
         }
     </style>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
@@ -35,11 +33,12 @@
             </div>
         </nav>
     </header>
-    <div class="vid">
-        <video autoplay loop muted controls>
-            <source src="video/00_Ads_Site_2025_001.mp4" type="video/mp4">
-        </video>
-    </div>
+
+        <div class="vid">
+            <video autoplay loop muted controls>
+                <source src="video/00_Ads_Site_2025_001.mp4" type="video/mp4">
+            </video>
+        </div>
 
     <script>
         function clickMenu(){
