--- a/produto_page4.html
+++ b/produto_page4.html
@@ -36,7 +36,7 @@
         </nav>
     </header>
     
-    <main class="prodbody">
+    <main>
         <h1>Características Principais</h1>
         <p>Esta versão incial de Material Aderente wOrmhOle compreende:</p>
         <ul>
