--- a/produto_page1.html
+++ b/produto_page1.html
@@ -36,7 +36,7 @@
         </nav>
     </header>
     
-    <main class="prodbody">
+    <main>
         <h1>Desenhos de Montagem</h1>
         <table>
             <colgroup>
@@ -146,8 +146,30 @@
                 <tr>
                     <td>MEGG-B1-G10</td>
                     <td>MEGG Bloco G Wormhole de 10 cm [20x20x10] Genérico</td>
-                    <td>Fig. 1, 5b, 7, 9</td>
-                    <td>G10</td>
+                    <td>
+                        <a href="imagens/Produtos/Image Figs/01_Amar_G-0.jpg" target="_blank" rel="nofollow">Fig.1</a> <br>
+                        <a href="imagens/Produtos/Image Figs/05_Ombreira de vão de Alinhado à parede-0.jpg" target="_blank" rel="nofollow">Fig.5b</a> <br>
+                        <a href="imagens/Produtos/Image Figs/07_Verga para Porta - Típico-0.jpg" target="_blank" rel="nofollow">Fig.7</a> <br>
+                        <a href="imagens/Produtos/Image Figs/09_Verga para Janela - Típico-0.jpg" target="_blank" rel="nofollow">Fig.9</a>
+                    </td>
+                    <td><a href="imagens/Produtos/Image Figs/G10-0.jpg" target="_blank" rel="nofollow">G10</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-G20</td>
+                    <td>MEGG Bloco G Wormhole de 20 cm [20x20x20] Genérico</td>
+                    <td>
+                        <a href="imagens/Produtos/Image Figs/01_Amar_G-0.jpg" target="_blank" rel="nofollow">Fig.1</a> <br>
+                        <a href="imagens/Produtos/Image Figs/04_Amar_X-0.jpg" target="_blank" rel="nofollow">Fig.4</a>
+                    </td>
+                    <td><a href="imagens/Produtos/Image Figs/G20-0.jpg" target="_blank" rel="nofollow">G20</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-G20-PT</td>
+                    <td>MEGG Bloco G Wormhole de 20 cm [20x20x20] Genérico com Passagem para Tubulação</td>
+                    <td>
+                        <a href="imagens/Produtos/Image Figs/01_Amar_G-0.jpg" target="_blank" rel="nofollow">Fig.1</a>
+                    </td>
+                    <td><a href="imagens/Produtos/Image Figs/G20-PT-0.jpg">G20-PT</a></td>
                 </tr>
             </tbody>
         </table>
