--- a/produto_page3.html
+++ b/produto_page3.html
@@ -36,7 +36,7 @@
         </nav>
     </header>
     
-    <main class="prodbody">
+    <main>
         <h1>Códigos de Identificação</h1>
         <table>
             <thead>
