Adicionando na tabela e alterando CSS

--- a/produto_page1.html
+++ b/produto_page1.html
@@ -169,7 +169,68 @@
                     <td>
                         <a href="imagens/Produtos/Image Figs/01_Amar_G-0.jpg" target="_blank" rel="nofollow">Fig.1</a>
                     </td>
-                    <td><a href="imagens/Produtos/Image Figs/G20-PT-0.jpg">G20-PT</a></td>
+                    <td><a href="imagens/Produtos/Image Figs/G20-PT-0.jpg" target="_blank" rel="nofollow">G20-PT</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-G20-Cx2P</td>
+                    <td>MEGG Bloco G Wormhole de 20 cm [20x20x20] Genérico com Caixinha 4x2 em Pé</td>
+                    <td>
+                        <a href="imagens/Produtos/Image Figs/01_Amar_G-0.jpg" target="_blank" rel="nofollow">Fig.1</a>
+                    </td>
+                    <td><a href="imagens/Produtos/Image Figs/G20-Cx2P-0.jpg" target="_blank" rel="nofollow">G20-Cx2P</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-G20-Cx2D</td>
+                    <td>MEGG Bloco G Wormhole de 20 cm [20x20x20] Genérico com Caixinha 4x2 Deitada</td>
+                    <td>
+                        <a href="imagens/Produtos/Image Figs/01_Amar_G-0.jpg" target="_blank" rel="nofollow">Fig.1</a>
+                    </td>
+                    <td><a href="imagens/Produtos/Image Figs/G20-Cx2D-0.jpg" target="_blank" rel="nofollow">G20-Cx2D</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-G20-Cx4</td>
+                    <td>MEGG Bloco G Wormhole de 20 cm [20x20x20] Genérico com Caixinha 4x4</td>
+                    <td>
+                        <a href="imagens/Produtos/Image Figs/01_Amar_G-0.jpg" target="_blank" rel="nofollow">Fig.1</a>
+                    </td>
+                    <td><a href="imagens/Produtos/Image Figs/G20-Cx4-0.jpg" target="_blank" rel="nofollow">G20-Cx4</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-G30</td>
+                    <td>MEGG Bloco G Wormhole de 30 cm [20x20x30] Genérico</td>
+                    <td>
+                        <a href="imagens/Produtos/Image Figs/05_Ombreira de vão de Alinhado à parede-0.jpg" target="_blank" rel="nofollow">Fig.5b</a> <br>
+                        <a href="imagens/Produtos/Image Figs/07_Verga para Porta - Típico-0.jpg" target="_blank" rel="nofollow">Fig.7</a> <br>
+                        <a href="imagens/Produtos/Image Figs/09_Verga para Janela - Típico-0.jpg" target="_blank" rel="nofollow">Fig.9</a>
+                    </td>
+                    <td><a href="imagens/Produtos/Image Figs/G30-0.jpg" target="_blank" rel="nofollow">G30</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-G40</td>
+                    <td>MEGG Bloco G Wormhole de 40 cm [20x20x40] Genérico</td>
+                    <td>
+                        <a href="imagens/Produtos/Image Figs/01_Amar_G-0.jpg" target="_blank" rel="nofollow">Fig.1</a> <br>
+                        <a href="imagens/Produtos/Image Figs/04_Amar_X-0.jpg" target="_blank" rel="nofollow">Fig.4</a>
+                    </td>
+                    <td><a href="imagens/Produtos/Image Figs/G40-0.jpg" target="_blank" rel="nofollow">G40</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-G40-PT</td>
+                    <td>MEGG Bloco G Wormhole de 40 cm [20x20x40] Genérico com Passagem para Tubulação</td>
+                    <td>
+                        <a href="imagens/Produtos/Image Figs/01_Amar_G-0.jpg" target="_blank" rel="nofollow">Fig.1</a>
+                    </td>
+                    <td><a href="imagens/Produtos/Image Figs/G40-PT-0.jpg" target="_blank" rel="nofollow">G40-PT</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-G40-D</td>
+                    <td>MEGG Bloco G Wormhole de 40 cm [20x20x40] Genérico com conexão Direita</td>
+                    <td>
+                        <a href="imagens/Produtos/Image Figs/03_Amar_T-0.jpg" target="_blank" rel="nofollow">Fig.3</a> <br>
+                        <a href="imagens/Produtos/Image Figs/05_Ombreira de vão de Alinhado à parede-0.jpg" target="_blank" rel="nofollow">Fig.5e <br> Fig.5f</a> <br>
+                        <a href="imagens/Produtos/Image Figs/06_Ombreira de vão Transversal à parede-0.jpg" target="_blank" rel="nofollow">Fig.6</a>
+                    </td>
+                    <td><a href="imagens/Produtos/Image Figs/G40-D-0.jpg" target="_blank" rel="nofollow">G40-D</a></td>
                 </tr>
             </tbody>
         </table>
