Adicionado conteúdo a tabela

--- a/produto_page1.html
+++ b/produto_page1.html
@@ -232,6 +232,49 @@
                     </td>
                     <td><a href="imagens/Produtos/Image Figs/G40-D-0.jpg" target="_blank" rel="nofollow">G40-D</a></td>
                 </tr>
+                <tr>
+                    <td>MEGG-B1-G40-E</td>
+                    <td>MEGG Bloco G Wormhole de 40 cm [20x20x40] Genérico com conexão Esquerda</td>
+                    <td>
+                        <a href="imagens/Produtos/Image Figs/03_Amar_T-0.jpg" target="_blank" rel="nofollow">Fig.3</a> <br>
+                        <a href="imagens/Produtos/Image Figs/05_Ombreira de vão de Alinhado à parede-0.jpg" target="_blank" rel="nofollow">Fig.5e <br> Fig.5f</a> <br>
+                        <a href="imagens/Produtos/Image Figs/06_Ombreira de vão Transversal à parede-0.jpg" target="_blank" rel="nofollow">Fig.6</a>
+                    </td>
+                    <td><a href="imagens/Produtos/Image Figs/G40-E-0.jpg" target="_blank" rel="nofollow">G40-E</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-G40-X</td>
+                    <td>MEGG Bloco G Wormhole de 40 cm [20x20x40] Genérico para amarração em X</td>
+                    <td>
+                        <a href="imagens/Produtos/Image Figs/04_Amar_X-0.jpg" target="_blank" rel="nofollow">Fig.4</a>
+                    </td>
+                    <td><a href="imagens/Produtos/Image Figs/G40-X-0.jpg" target="_blank" rel="nofollow">G40-X</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-T20-L</td>
+                    <td>MEGG Bloco T Wormhole de 20 cm [20x20x20] Terminal L</td>
+                    <td>
+                        <a href="imagens/Produtos/Image Figs/06_Ombreira de vão Transversal à parede-0.jpg" target="_blank" rel="nofollow">Fig.6a <br>Fig.6b</a>
+                    </td>
+                    <td><a href="imagens/Produtos/Image Figs/T20-L-0.jpg" target="_blank" rel="nofollow">T20-L</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-T20-T</td>
+                    <td>MEGG Bloco T Wormhole de 20 cm [20x20x20] Terminal T</td>
+                    <td>
+                        <a href="imagens/Produtos/Image Figs/06_Ombreira de vão Transversal à parede-0.jpg" target="_blank" rel="nofollow">Fig.6c</a>
+                    </td>
+                    <td><a href="imagens/Produtos/Image Figs/T20-T-0.jpg" target="_blank" rel="nofollow">T20-T</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-T40-D</td>
+                    <td>MEGG Bloco T Wormhole de 40 cm [20x20x40] Terminal L - Direita</td>
+                    <td><a href="imagens/Produtos/Image Figs/02_Amar_L-0.jpg" target="_blank" rel="nofollow">Fig.2</a> <br>
+                        <a href="imagens/Produtos/Image Figs/05_Ombreira de vão de Alinhado à parede-0.jpg" target="_blank" rel="nofollow">Fig.5c <br> Fig.5d</a> <br>
+                        <a href="imagens/Produtos/Image Figs/06_Ombreira de vão Transversal à parede-0.jpg" target="_blank" rel="nofollow">Fig.6d</a>
+                    </td>
+                    <td><a href="imagens/Produtos/Image Figs/T40-D-0.jpg" target="_blank" rel="nofollow">T40-D</a></td>
+                </tr>
             </tbody>
         </table>
 
@@ -268,9 +311,7 @@
             <li>Os blocos terminais de fiadas específicas, mesmo sendo terminais, não fazem parte deste grupo e portanto, não têm o prefixo T. Estes referidos blocos têm o prefixo do grupo específico (ex.: U20-L, J20-H12L);</li>
             <li>Os blocos tipo T deste grupo sempre têm uma face transversal exposta, ou seja, é Terminação da parede para mudança de direção, ou em L, ou em T (ex.: T40-D, T40-T). Logicamente que mudança de direção em X (cruz) não possibilita nenhuma face transversal exposta.</li>
         </ul>
-        <h3>
-            <p><strong>U:</strong> Canaleta U</p>
-        </h3>
+        <h3>U: Canaleta U</h3>
         <ul>
             <li>São os blocos, na maioria canaletas U, montados nas fiadas específicas, como no caso de vergas e contravergas, cintas de amarração, etc.</li>
             <li>O peitoril da janela, embora não tenha um perfil de canaleta, pertence a este grupo porque é montado em conjunto com os blocos U da Contraverga.</li>
