Adicionando elementos a tabela 2 e pequenas mudanças no CSS

--- a/home.html
+++ b/home.html
@@ -40,6 +40,8 @@
             </video>
         </div>
 
+        <p class="mensagemHOME">Clique no <span class="material-symbols-outlined">menu</span> para abrir o menu</p>
+
     <script>
         function clickMenu(){
             if(itens.style.display=='block'){
