--- a/produto_page1.html
+++ b/produto_page1.html
@@ -40,8 +40,8 @@
         <h1>Desenhos de Montagem</h1>
         <table>
             <colgroup>
-                <col class="clinkb1">
-                <col class="cdescb1">
+                <col class="clink">
+                <col class="cdesc">
             </colgroup>
             <thead>
                 <th scope="col">Link</th>
@@ -131,10 +131,10 @@
         <h1>Códigos de Identificação</h1>
         <table>
             <colgroup>
-                <col class="ccodib2">
-                <col class="cdescb2">
-                <col class="cutilb2">
-                <col class="cdeseb2">
+                <col class="ccod">
+                <col class="cdesc">
+                <col class="cuti">
+                <col class="cdese">
             </colgroup>
             <thead>
                 <th scope="col">Código</th>
@@ -182,17 +182,13 @@
                 <tr>
                     <td>MEGG-B1-G20-Cx2D</td>
                     <td>MEGG Bloco G Wormhole de 20 cm [20x20x20] Genérico com Caixinha 4x2 Deitada</td>
-                    <td>
-                        <a href="imagens/Produtos/Image Figs/01_Amar_G-0.jpg" target="_blank" rel="nofollow">Fig.1</a>
-                    </td>
+                    <td>Imagem Indisponível</td>
                     <td><a href="imagens/Produtos/Image Figs/G20-Cx2D-0.jpg" target="_blank" rel="nofollow">G20-Cx2D</a></td>
                 </tr>
                 <tr>
                     <td>MEGG-B1-G20-Cx4</td>
                     <td>MEGG Bloco G Wormhole de 20 cm [20x20x20] Genérico com Caixinha 4x4</td>
-                    <td>
-                        <a href="imagens/Produtos/Image Figs/01_Amar_G-0.jpg" target="_blank" rel="nofollow">Fig.1</a>
-                    </td>
+                    <td>Imagem Indisponível</td>
                     <td><a href="imagens/Produtos/Image Figs/G20-Cx4-0.jpg" target="_blank" rel="nofollow">G20-Cx4</a></td>
                 </tr>
                 <tr>
@@ -274,6 +270,60 @@
                         <a href="imagens/Produtos/Image Figs/06_Ombreira de vão Transversal à parede-0.jpg" target="_blank" rel="nofollow">Fig.6d</a>
                     </td>
                     <td><a href="imagens/Produtos/Image Figs/T40-D-0.jpg" target="_blank" rel="nofollow">T40-D</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-T40-E</td>
+                    <td>MEGG Bloco T Wormhole de 40 cm [20x20x40] Terminal L - Esquerda</td>
+                    <td>Fig. 2 <br>Fig.5c <br>Fig.5d <br>Fig.6a</td>
+                    <td><a href="imagens/Produtos/Image Figs/T40-E-0.jpg" target="_blank" rel="nofollow">T40-E</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-T40-T</td>
+                    <td>MEGG Bloco T Wormhole de 40 cm [20x20x40] Terminal T</td>
+                    <td>Fig. 3 <br>Fig.5e <br>Fig.5f <br>Fig.6c</td>
+                    <td><a href="imagens/Produtos/Image Figs/T40-T-0.jpg" target="_blank" rel="nofollow">T40-T</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-U10</td>
+                    <td>MEGG Bloco U Wormhole de 10 cm [20x20x10] canaleta U</td>
+                    <td>Fig.11</td>
+                    <td><a href="imagens/Produtos/Image Figs/U10-0.jpg" target="_blank" rel="nofollow">U10</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-U10-CV</td>
+                    <td>MEGG Bloco U Wormhole de 10 cm [20x17x10] canaleta U ContraVerga</td>
+                    <td>Fig.11</td>
+                    <td><a href="imagens/Produtos/Image Figs/U10-CV-0.jpg" target="_blank" rel="nofollow">U10-CV</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-U20</td>
+                    <td>MEGG Bloco U Wormhole de 20 cm [20x20x20] canaleta U</td>
+                    <td>Fig.7 <br>Fig.8 <br>Fig.14</td>
+                    <td><a href="imagens/Produtos/Image Figs/U20-0.jpg" target="_blank" rel="nofollow">U20</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-U20-CV</td>
+                    <td>MEGG Bloco U Wormhole de 20 cm [20x17x20] canaleta U ContraVerga</td>
+                    <td>Fig.11 <br>Fig.12</td>
+                    <td><a href="imagens/Produtos/Image Figs/U20-CV-0.jpg" target="_blank" rel="nofollow">U20-CV</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-U20-PV</td>
+                    <td>MEGG Bloco U Wormhole de 20 cm [20x20x20] canaleta U com Passagem Vertical</td>
+                    <td>Fig.7 <br>Fig.8 <br>Fig.9 <br>Fig.11 <br>Fig.12 <br>Fig.14</td>
+                    <td><a href="imagens/Produtos/Image Figs/U20-PV-0.jpg" target="_blank" rel="nofollow">U20-PV</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-U20-Ve</td>
+                    <td>MEGG Bloco U Wormhole de 20 cm [20x20x20] canaleta U Verga</td>
+                    <td>Fig.9 <br>Fig.10</td>
+                    <td><a href="imagens/Produtos/Image Figs/U20-Ve-0.jpg" target="_blank" rel="nofollow">U20-Ve</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-U20-L</td>
+                    <td>MEGG Bloco U Wormhole de 20 cm [20x20x20] bloco terminal L para canaleta U</td>
+                    <td>Fig.8a <br>Fig.10a <br>Fig.12 <br>Fig.14 <br>Fig.15</td>
+                    <td><a href="imagens/Produtos/Image Figs/U20-L-0.jpg" target="_blank" rel="nofollow">U20-L</a></td>
                 </tr>
             </tbody>
         </table>
