Adicionando mais conteúdo a tabela2

--- a/produto_page1.html
+++ b/produto_page1.html
@@ -325,6 +325,93 @@
                     <td>Fig.8a <br>Fig.10a <br>Fig.12 <br>Fig.14 <br>Fig.15</td>
                     <td><a href="imagens/Produtos/Image Figs/U20-L-0.jpg" target="_blank" rel="nofollow">U20-L</a></td>
                 </tr>
+                <tr>
+                    <td>MEGG-B1-U20-T</td>
+                    <td>MEGG Bloco U Wormhole de 20 cm [20x20x20] bloco terminal T para canaleta U</td>
+                    <td>Fig.8b <br>Fig.10b <br>Fig.12 <br>Fig.14 <br>Fig.17</td>
+                    <td><a href="imagens/Produtos/Image Figs/U20-T-0.jpg" target="_blank" rel="nofollow">U20-T</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-U20-X</td>
+                    <td>MEGG Bloco U Wormhole de 20 cm [20x20x20] bloco terminal X para canaleta U</td>
+                    <td>Fig.14d <br>Fig.18</td>
+                    <td><a href="imagens/Produtos/Image Figs/U20-X-0.jpg" target="_blank" rel="nofollow">U20-X</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-U40</td>
+                    <td>MEGG Bloco U Wormhole de 40 cm [20x20x40] canaleta U</td>
+                    <td>Imagem Indisponível</td>
+                    <td><a href="imagens/Produtos/Image Figs/U40-0.jpg" target="_blank" rel="nofollow">U40</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-U40-Ve</td>
+                    <td>MEGG Bloco U Wormhole de 40 cm [20x20x40] canaleta U Verga</td>
+                    <td>Imagem Indisponível</td>
+                    <td><a href="imagens/Produtos/Image Figs/U40-Ve-0.jpg" target="_blank" rel="nofollow">U40-Ve</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-U90-Pe</td>
+                    <td>MEGG Peitoril Wormhole de 90 cm [3x24x90] </td>
+                    <td>Fig.13</td>
+                    <td><a href="imagens/Produtos/Image Figs/U90-Pe-0.jpg" target="_blank" rel="nofollow">U90-Pe</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-J10-H12</td>
+                    <td>MEGG Bloco J Wormhole de 10 cm [20x32x10] canaleta J para laje 12 cm</td>
+                    <td>Imagem Indisponível</td>
+                    <td><a href="imagens/Produtos/Image Figs/J10-H12-0.jpg" target="_blank" rel="nofollow">J10-H12</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-J20-H12</td>
+                    <td>MEGG Bloco J Wormhole de 20 cm [20x32x20] canaleta J para laje 12 cm</td>
+                    <td>Fig.15</td>
+                    <td><a href="imagens/Produtos/Image Figs/J20-H12-0.jpg" target="_blank" rel="nofollow">J20-H12</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-J20-H12PV</td>
+                    <td>MEGG Bloco J Wormhole de 20 cm [20x32x20] canaleta J para laje 12 cm com Passagem Vertical</td>
+                    <td>Fig.15</td>
+                    <td><a href="imagens/Produtos/Image Figs/J20-H12PV-0.jpg" target="_blank" rel="nofollow">J20-H12PV</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-J20-H12L</td>
+                    <td>MEGG Bloco J Wormhole de 20 cm [20x12x20] cantoneira terminal L para canaleta J para laje 12 cm</td>
+                    <td>Fig.15</td>
+                    <td><a href="imagens/Produtos/Image Figs/J20-H12L-0.jpg" target="_blank" rel="nofollow">J20-H12L</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-B5</td>
+                    <td>MEGG Bloco B Wormhole de 5 cm [20x5x5] Boneca para vão de porta/janela</td>
+                    <td>Imagem Indisponível</td>
+                    <td><a href="imagens/Produtos/Image Figs/B5-0.jpg" target="_blank" rel="nofollow">B5</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-B10</td>
+                    <td>MEGG Bloco B Wormhole de 10 cm [20x5x10] Boneca para vão de porta/janela</td>
+                    <td>Imagem Indisponível</td>
+                    <td><a href="imagens/Produtos/Image Figs/B10-0.jpg" target="_blank" rel="nofollow">B10</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-B15</td>
+                    <td>MEGG Bloco B Wormhole de 15 cm [20x5x15] Boneca para vão de porta/janela</td>
+                    <td>Fig.8</td>
+                    <td><a href="imagens/Produtos/Image Figs/B15-0.jpg" target="_blank" rel="nofollow">B15</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-B20</td>
+                    <td>MEGG Bloco B Wormhole de 20 cm [20x5x20] Boneca para vão de porta/janela</td>
+                    <td>Fig.5 <br>Fig.6 <br>Fig.7 <br>Fig.8 <br>Fig.9 <br>Fig.13</td>
+                    <td><a href="imagens/Produtos/Image Figs/B20-0.jpg" target="_blank" rel="nofollow">B20</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-B20-Ca</td>
+                    <td>MEGG Bloco B Wormhole de 20 cm [20x5x20] Boneca para Canto de vão de porta</td>
+                    <td>Fig.7 <br>Fig.8</td>
+                    <td><a href="imagens/Produtos/Image Figs/B20-Ca-0.jpg" target="_blank" rel="nofollow">B20-Ca</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-V10</td>
+                </tr>
             </tbody>
         </table>
 
