--- a/produto_page1.html
+++ b/produto_page1.html
@@ -411,6 +411,45 @@
                 </tr>
                 <tr>
                     <td>MEGG-B1-V10</td>
+                    <td>MEGG Bloco V Wormhole de 10 cm [20x40x10] canaleta V</td>
+                    <td>Fig.16</td>
+                    <td><a href="imagens/Produtos/Image Figs/V10-0.jpg" target="_blank" rel="nofollow">V10</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-V20</td>
+                    <td>MEGG Bloco V Wormhole de 20 cm [20x40x20] canaleta V</td>
+                    <td>Fig.16 <br>Fig.17 <br>Fig.18</td>
+                    <td><a href="imagens/Produtos/Image Figs/V20-0.jpg" target="_blank" rel="nofollow">V20</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-V20-PV</td>
+                    <td>MEGG Bloco V Wormhole de 20 cm [20x40x20] canaleta V com Passagem Vertical</td>
+                    <td>Fig.16</td>
+                    <td><a href="imagens/Produtos/Image Figs/V20-PV-0.jpg" target="_blank" rel="nofollow">V20-PV</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-P25-Qu</td>
+                    <td>MEGG Bloco P Wormhole de 25 cm [25x20x25] Pilar Quadrado</td>
+                    <td>Fig.19a</td>
+                    <td><a href="imagens/Produtos/Image Figs/P25-Qu-0.jpg" target="_blank" rel="nofollow">P25-Qu</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-P2040-Rt</td>
+                    <td>MEGG Bloco P Wormhole de 20x40 cm [20x20x40] Pilar Retangular</td>
+                    <td>Fig.19b</td>
+                    <td><a href="imagens/Produtos/Image Figs/P2040-Rt-0.jpg" target="_blank" rel="nofollow">P2040-Rt</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-P30-Rd</td>
+                    <td>MEGG Bloco P Wormhole de 30 cm [30x20x30] Pilar Redondo</td>
+                    <td>Fig.19c</td>
+                    <td><a href="imagens/Produtos/Image Figs/P30-Rd-0.jpg" target="_blank" rel="nofollow">P30-Rd</a></td>
+                </tr>
+                <tr>
+                    <td>MEGG-B1-P2540-Ob</td>
+                    <td>MEGG Bloco P Wormhole de 25x40 cm [25x20x40] Pilar Oblongo</td>
+                    <td>Fig.19d</td>
+                    <td><a href="imagens/Produtos/Image Figs/P2540-Ob-0.jpg" target="_blank" rel="nofollow">P2540-Ob</a></td>
                 </tr>
             </tbody>
         </table>
