--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
     <header>
         <menu>
             <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
-            <span id="burger" onclick="clickMenu()">Clique aqui para abrir o menu</span>
+            <span id="burger" onclick="clickMenu()">Clique aqui para <strong>abrir/fechar</strong> o menu</span>
         </menu>
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
@@ -39,8 +39,6 @@
                 <source src="video/00_Ads_Site_2025_001.mp4" type="video/mp4">
             </video>
         </div>
-
-        <p class="mensagemHOME">Clique no <span class="material-symbols-outlined">menu</span> para abrir o menu</p>
 
     <script>
         function clickMenu(){
