--- a/produto_page4.html
+++ b/produto_page4.html
@@ -13,7 +13,7 @@
     <header>
         <menu>
             <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
-            <span id="burger" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+            <span id="burger" onclick="clickMenu()">Clique aqui para <strong>abrir/fechar</strong> o menu</span>
         </menu>
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
