--- a/produto_page5.html
+++ b/produto_page5.html
@@ -11,7 +11,7 @@
 </head>
 <body onresize="mudouTamanho()">
     <header>
-        <menu onclick="substituirElementos()">
+        <menu>
             <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
             <span id="burger" onclick="clickMenu()">Clique aqui para <strong>abrir/fechar</strong> o menu</span>
         </menu>
@@ -67,14 +67,21 @@
         }
 
         function substituirElementos() {
-            if(window.innerWidth<=768){
+            if (window.innerWidth <= 768) {
                 const prod = document.getElementById("prod");
                 const nagsec = document.getElementById("nagsec");
-                prod.innerHTML = nagsec.innerHTML;
-                prod.className = nagsec.className;
-                nagsec.style.display = 'none';
+
+                if (prod && nagsec) {
+                    prod.innerHTML = nagsec.innerHTML;
+                    prod.className = nagsec.className;
+                    nagsec.style.display = "none";
+                }
             }
         }
+
+        document.addEventListener("DOMContentLoaded", substituirElementos);
+
+        window.addEventListener("resize", substituirElementos);
     </script>
 </body>
 </html>
