--- a/produto_page1.html
+++ b/produto_page1.html
@@ -40,89 +40,89 @@
         <h1>Desenhos de Montagem</h1>
         <table>
             <colgroup>
-                <col class="clink">
                 <col class="cdesc">
+                <col class="clink">
             </colgroup>
             <thead>
-                <th scope="col">Link</th>
                 <th scope="col">Descrição</th>
+                <th scope="col">Link</th>
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="imagens/Produtos/Image Figs/01_Amar_G-0.jpg" rel="nofollow">Fig.1</a></td>
                     <td>Amarração da parede com blocos Genéricos</td>
+                    <td><a href="imagens/Produtos/Image Figs/01_Amar_G-0.jpg" rel="nofollow">Fig.1</a></td>
                 </tr>
                 <tr>
-                    <td><a href="imagens/Produtos/Image Figs/02_Amar_L-0.jpg" rel="nofollow">Fig.2</a></td>
                     <td>Amarração em L com blocos Terminais</td>
+                    <td><a href="imagens/Produtos/Image Figs/02_Amar_L-0.jpg" rel="nofollow">Fig.2</a></td>
                 </tr>
                 <tr>
-                    <td><a href="imagens/Produtos/Image Figs/03_Amar_T-0.jpg" rel="nofollow">Fig.3</a></td>
                     <td>Amarração em T com blocos Terminais</td>
+                    <td><a href="imagens/Produtos/Image Figs/03_Amar_T-0.jpg" rel="nofollow">Fig.3</a></td>
                 </tr>
                 <tr>
-                    <td><a href="imagens/Produtos/Image Figs/04_Amar_X-0.jpg" target="_blank" rel="nofollow">Fig.4</a></td>
                     <td>Amarração em X com blocos Genéricos</td>
+                    <td><a href="imagens/Produtos/Image Figs/04_Amar_X-0.jpg" target="_blank" rel="nofollow">Fig.4</a></td>
                 </tr>
                 <tr>
-                    <td><a href="imagens/Produtos/Image Figs/05_Ombreira de vão de Alinhado à parede-0.jpg" rel="nofollow">Fig.5</a></td>
                     <td>Amarração de ombreira de vão Alinhado à parede</td>
+                    <td><a href="imagens/Produtos/Image Figs/05_Ombreira de vão de Alinhado à parede-0.jpg" rel="nofollow">Fig.5</a></td>
                 </tr>
                 <tr>
-                    <td><a href="imagens/Produtos/Image Figs/06_Ombreira de vão Transversal à parede-0.jpg" rel="nofollow">Fig.6</a></td>
                     <td>Amarração de ombreira de vão Transversal à parede</td>
+                    <td><a href="imagens/Produtos/Image Figs/06_Ombreira de vão Transversal à parede-0.jpg" rel="nofollow">Fig.6</a></td>
                 </tr>
                 <tr>
-                    <td><a href="imagens/Produtos/Image Figs/07_Verga para Porta - Típico-0.jpg" rel="nofollow">Fig.7</a></td>
                     <td>Verga para Porta - Típico</td>
+                    <td><a href="imagens/Produtos/Image Figs/07_Verga para Porta - Típico-0.jpg" rel="nofollow">Fig.7</a></td>
                 </tr>
                 <tr>
-                    <td><a href="imagens/Produtos/Image Figs/08_Verga para Porta - na Terminação da parede-0.jpg" rel="nofollow">Fig.8</a></td>
                     <td>Verga para Porta - Na Terminação da parede</td>
+                    <td><a href="imagens/Produtos/Image Figs/08_Verga para Porta - na Terminação da parede-0.jpg" rel="nofollow">Fig.8</a></td>
                 </tr>
                 <tr>
-                    <td><a href="imagens/Produtos/Image Figs/09_Verga para Janela - Típico-0.jpg" rel="nofollow">Fig.9</a></td>
                     <td>Verga para Janela - Típico</td>
+                    <td><a href="imagens/Produtos/Image Figs/09_Verga para Janela - Típico-0.jpg" rel="nofollow">Fig.9</a></td>
                 </tr>
                 <tr>
-                    <td><a href="imagens/Produtos/Image Figs/10_Verga para Janela - na Terminação da parede-0.jpg" rel="nofollow">Fig.10</a></td>
                     <td>Verga para Janela - Na Terminação da parede</td>
+                    <td><a href="imagens/Produtos/Image Figs/10_Verga para Janela - na Terminação da parede-0.jpg" rel="nofollow">Fig.10</a></td>
                 </tr>
                 <tr>
-                    <td><a href="imagens/Produtos/Image Figs/11_Contraverga - Típico-0.jpg" rel="nofollow">Fig.11</a></td>
                     <td>Contraverga - Típico</td>
+                    <td><a href="imagens/Produtos/Image Figs/11_Contraverga - Típico-0.jpg" rel="nofollow">Fig.11</a></td>
                 </tr>
                 <tr>
-                    <td><a href="imagens/Produtos/Image Figs/12_Contraverga - na Terminação da parede-0.jpg" rel="nofollow">Fig.12</a></td>
                     <td>Contraverga - Na Terminação da parede</td>
+                    <td><a href="imagens/Produtos/Image Figs/12_Contraverga - na Terminação da parede-0.jpg" rel="nofollow">Fig.12</a></td>
                 </tr>
                 <tr>
-                    <td><a href="imagens/Produtos/Image Figs/13_Montagem do Peitoril-0.jpg" rel="nofollow">Fig.13</a></td>
                     <td>Montagem do Peitoril - Típico</td>
+                    <td><a href="imagens/Produtos/Image Figs/13_Montagem do Peitoril-0.jpg" rel="nofollow">Fig.13</a></td>
                 </tr>
                 <tr>
-                    <td><a href="imagens/Produtos/Image Figs/14_Amarração de Canaletas U-0.jpg" rel="nofollow">Fig.14</a></td>
                     <td>Amarração de canaletas U</td>
+                    <td><a href="imagens/Produtos/Image Figs/14_Amarração de Canaletas U-0.jpg" rel="nofollow">Fig.14</a></td>
                 </tr>
                 <tr>
-                    <td><a href="imagens/Produtos/Image Figs/15_Amarração de canaletas J-0.jpg" rel="nofollow">Fig.15</a></td>
                     <td>Amarração de canaletas J</td>
+                    <td><a href="imagens/Produtos/Image Figs/15_Amarração de canaletas J-0.jpg" rel="nofollow">Fig.15</a></td>
                 </tr>
                 <tr>
-                    <td><a href="imagens/Produtos/Image Figs/16_Viga - Apoio sobre coluna-0.jpg" rel="nofollow">Fig.16</a></td>
                     <td>Viga - Apoio sobre coluna</td>
+                    <td><a href="imagens/Produtos/Image Figs/16_Viga - Apoio sobre coluna-0.jpg" rel="nofollow">Fig.16</a></td>
                 </tr>
                 <tr>
-                    <td><a href="imagens/Produtos/Image Figs/17_Viga - Terminação em T-0.jpg" rel="nofollow">Fig.17</a></td>
                     <td>Viga - Terminação em T</td>
+                    <td><a href="imagens/Produtos/Image Figs/17_Viga - Terminação em T-0.jpg" rel="nofollow">Fig.17</a></td>
                 </tr>
                 <tr>
-                    <td><a href="imagens/Produtos/Image Figs/18_Viga - Terminação em X-0.jpg" rel="nofollow">Fig.18</a></td>
                     <td>Viga - Terminação em X</td>
+                    <td><a href="imagens/Produtos/Image Figs/18_Viga - Terminação em X-0.jpg" rel="nofollow">Fig.18</a></td>
                 </tr>
                 <tr>
-                    <td><a href="imagens/Produtos/Image Figs/19_Pilar-0.jpg" rel="nofollow">Fig.19</a></td>
                     <td>Pilar</td>
+                    <td><a href="imagens/Produtos/Image Figs/19_Pilar-0.jpg" rel="nofollow">Fig.19</a></td>
                 </tr>
             </tbody>
         </table>
@@ -132,8 +132,8 @@
         <table>
             <colgroup>
                 <col class="ccod">
-                <col class="cdesc">
-                <col class="cuti">
+                <col class="cdescr">
+                <col class="cutil">
                 <col class="cdese">
             </colgroup>
             <thead>
@@ -148,8 +148,8 @@
                     <td>MEGG Bloco G Wormhole de 10 cm [20x20x10] Genérico</td>
                     <td>
                         Fig.1 <br>
-                        Fig.5b<br>
-                        Fig.7<br>
+                        Fig.5b <br>
+                        Fig.7 <br>
                         Fig.9
                     </td>
                     <td><a href="imagens/Produtos/Image Figs/G10-0.jpg" rel="nofollow">G10</a></td>
@@ -182,13 +182,13 @@
                 <tr>
                     <td>MEGG-B1-G20-Cx2D</td>
                     <td>MEGG Bloco G Wormhole de 20 cm [20x20x20] Genérico com Caixinha 4x2 Deitada</td>
-                    <td>Imagem Indisponível</td>
+                    <td>-</td>
                     <td><a href="imagens/Produtos/Image Figs/G20-Cx2D-0.jpg" rel="nofollow">G20-Cx2D</a></td>
                 </tr>
                 <tr>
                     <td>MEGG-B1-G20-Cx4</td>
                     <td>MEGG Bloco G Wormhole de 20 cm [20x20x20] Genérico com Caixinha 4x4</td>
-                    <td>Imagem Indisponível</td>
+                    <td>-</td>
                     <td><a href="imagens/Produtos/Image Figs/G20-Cx4-0.jpg" rel="nofollow">G20-Cx4</a></td>
                 </tr>
                 <tr>
@@ -340,13 +340,13 @@
                 <tr>
                     <td>MEGG-B1-U40</td>
                     <td>MEGG Bloco U Wormhole de 40 cm [20x20x40] canaleta U</td>
-                    <td>Imagem Indisponível</td>
+                    <td>-</td>
                     <td><a href="imagens/Produtos/Image Figs/U40-0.jpg" rel="nofollow">U40</a></td>
                 </tr>
                 <tr>
                     <td>MEGG-B1-U40-Ve</td>
                     <td>MEGG Bloco U Wormhole de 40 cm [20x20x40] canaleta U Verga</td>
-                    <td>Imagem Indisponível</td>
+                    <td>-</td>
                     <td><a href="imagens/Produtos/Image Figs/U40-Ve-0.jpg" rel="nofollow">U40-Ve</a></td>
                 </tr>
                 <tr>
@@ -358,7 +358,7 @@
                 <tr>
                     <td>MEGG-B1-J10-H12</td>
                     <td>MEGG Bloco J Wormhole de 10 cm [20x32x10] canaleta J para laje 12 cm</td>
-                    <td>Imagem Indisponível</td>
+                    <td>-</td>
                     <td><a href="imagens/Produtos/Image Figs/J10-H12-0.jpg" rel="nofollow">J10-H12</a></td>
                 </tr>
                 <tr>
@@ -382,13 +382,13 @@
                 <tr>
                     <td>MEGG-B1-B5</td>
                     <td>MEGG Bloco B Wormhole de 5 cm [20x5x5] Boneca para vão de porta/janela</td>
-                    <td>Imagem Indisponível</td>
+                    <td>-</td>
                     <td><a href="imagens/Produtos/Image Figs/B5-0.jpg" rel="nofollow">B5</a></td>
                 </tr>
                 <tr>
                     <td>MEGG-B1-B10</td>
                     <td>MEGG Bloco B Wormhole de 10 cm [20x5x10] Boneca para vão de porta/janela</td>
-                    <td>Imagem Indisponível</td>
+                    <td>-</td>
                     <td><a href="imagens/Produtos/Image Figs/B10-0.jpg" rel="nofollow">B10</a></td>
                 </tr>
                 <tr>
